--- a/whitepaper/uniond-whitepaper.tex
+++ b/whitepaper/uniond-whitepaper.tex
@@ -17,19 +17,22 @@ The following people contributed the thinking and ideas collected in this docume
 
 \section {Motivation}
 
-We are trying to systematise the organising of groups of people sharing common skills and/or interests. Guilds, co-operatives and friendly societies share many of these ideas which until now have not been formalised in software.
+We are trying to systematise the organising of groups of people sharing common skills and/or interests. Guilds, co-operatives and friendly societies share many of these characteristics which until now have not been formalised in software.
 
-The problem we are trying to solve; how to facilitate agreement in a meaningful way that resolves the social, financial and political issues that arise from questions of how to distribute the collective resources of an organisation.
+The problem we are trying to solve: How can we more effectively facilitate the ongoing agreement across unions in a way that resolves the social, financial and political issues that arise from their need to (re)distribute collective resources.
 
-We are not trying to put existing unions into code, labour unions are just one possible use-case. We are trying to facilitate new types of co-operation and collective action. Union is simply a powerful concept we can take and carry forward.
+Union, the act of joining together, of sharing an association in common interest, offers a powerful concept to carry forward our attempt to facilitate new types of co-operation and collective action.
 
-As labour markets become horizontal and people sell their skills in the marketplace outside of traditional corporate structures, there is a need for collective organising of such skills and interests. As people form in temporary communities for common purpose, there is a need to re-think the distribution of equity. As organisations stress test our natural environment, there is a need to innovate in the fundamental way we undertake business -- to re-invent the organisation.
+As labour markets become horizontal and people sell their skills in the marketplace outside of traditional corporate structures, there is a need for collective organising of such skills and interests. As people form in temporary communities for common purpose, there is a need to re-think the distribution of equity. As organisations stress test our natural environment, there is a need to innovate in the fundamental way we undertake business – to re-invent the organisation.
 
 \section {Background}
 
-UnionD is a Decentralised Autonomous Organisation (DAO) model that can be customised and amended to suit the will of its members (a DAO is a smart contract on the blockchain, code that runs exactly as it was programmed). A UnionD could be a full direct democracy with participation from every member. A UnionD could be a dictatorship. A UnionD could be run by a small group of elite members. The ability to shift between governance models is a key feature of the UnionD model. Typically, shifts between models of governance have been attended by long and often violent struggles. Organisations as they exist today are path dependent. The initial conditions are critical to the outcomes of the organisation. Now, with advancements in applied cryptography, it is entirely possible to build new models of governance hitherto unimagined. Furthermore, it is entirely possible to build a new social operating system as competing organisational models aggregate and trade with each other on the open market. Arguably, the foundation has already been built, we are merely implementing some of the consequential ideas.
+UnionD is a Decentralised Autonomous Organisation (DAO) model that can be customised and amended to suit the will of its members (a DAO is a smart contract on the blockchain, code that runs exactly as it was programmed). 
+A UnionD can take many forms. A UnionD could be a full direct democracy with participation from every member. It could be a dictatorship, or a small group run by elite members. This flexibility and ability to shift between governance models is a key feature of the UnionD model.
 
-The UnionD model allows a collective organisation to represent different value states in fungible tokens. Those value states may be the right to wages, voting power, or equity. Those tokens can be traded on the open market, with the attendant efficiencies of transparency, speed, and administration.
+Organisations as they exist today are often path dependent. The initial conditions are critical to the outcomes of the organisation. Now, with advancements in applied cryptography, it is entirely possible to loosen this dependency and build new models of governance hitherto unimagined. Furthermore, it is entirely possible to build a new social operating system as competing organisational models aggregate and trade with each other on the open market. Arguably, the foundation has already been built, we are merely implementing some of the consequential ideas.
+
+The UnionD model allows a collective organisation to represent different value states in fungible tokens, and those value states may be the right to wages, voting power, equity . These tokens can be traded on the open market, with the attendant efficiencies of transparency, speed, and administration.
 
 The source of authority for any organisation stems from the will of the people of whom it comprises. Countless revolutions and struggles have arisen from the clash between organisational structures, within those organisations, and between organisations and the people upon whom the will of a particular organisation has been imposed. Yet the joint stock company, a popular form of organising, has created immense value for the world. Nation states have also created tremendous value. We are not suggesting that these structures should be discontinued, rather that balance has already tipped in favour of structures that enable the proper will of the people to be expressed. UnionD is an attempt to steer a vision towards a model of organisation that is transparent, adaptable, efficient, and reflexive.
 
