linting, whitepaper typos

--- a/whitepaper/uniond-whitepaper.tex
+++ b/whitepaper/uniond-whitepaper.tex
@@ -28,7 +28,7 @@ As labour markets become horizontal and people sell their skills in the marketpl
 \section {Background}
 
 UnionD is a Decentralised Autonomous Organisation (DAO) model that can be customised and amended to suit the will of its members (a DAO is a smart contract on the blockchain, code that runs exactly as it was programmed). 
-A UnionD can take many forms. A UnionD could be a full direct democracy with participation from every member. It could be a dictatorship, or a small group run by elite members. This flexibility and ability to shift between governance models is a key feature of the UnionD model.
+A UnionD can take many forms. A UnionD could be a full direct democracy with participation from every member. It could be a dictatorship, or run by a small group of elite members. This flexibility and ability to shift between governance models is a key feature of the UnionD model.
 
 Organisations as they exist today are often path dependent. The initial conditions are critical to the outcomes of the organisation. Now, with advancements in applied cryptography, it is entirely possible to loosen this dependency and build new models of governance hitherto unimagined. Furthermore, it is entirely possible to build a new social operating system as competing organisational models aggregate and trade with each other on the open market. Arguably, the foundation has already been built, we are merely implementing some of the consequential ideas.
 
