hacking apart main contract

--- a/whitepaper/uniond-whitepaper.tex
+++ b/whitepaper/uniond-whitepaper.tex
@@ -151,7 +151,7 @@ If properly designed, a UnionD instantiation would simply pass in parameters to 
 
 \subsection{Labour Unions}
 
-The initial use-case we explored was the potential to transform labour unions. In Australia, for example, there have been countless scandals surrounding the misappropriation of funds by union officials. The UnionD model would bring immediate transparency to the finances of such organisations. Labour Unions often grow to a model that is, for all intensive purposes, identical to the structures of power they were initially designed to offset. For example, it would not be uncommon for top-ranking union officials to earn a salary equivalent to the upper management within a corporation. Labour Union 'apparatchiks', a term used to describe career factional operatives, can hold considerable political power within their organisations, distorting outcomes. Under the UnionD model, there is room for 'apparatchiks', however, their political capital would be allocated to them only by the explicit consent and will of their fellow members. Furthermore under the UnionD model, it is possible to organise Labour Unions around commonalities other than the workplace. Given the fractionalisation of the workforce, we can imagine Labour Unions forming under the UnionD model on the basis of shared skills. This could confer other benefits, such as peer mentoring whereby fellow members share  skills and insights of their craft, raising the quality of the workforce. A UnionD Labour Union, would provide a better conduit between workers and management, increase the tempo of decision making, and those decisions would be better reflective of the will of the members.
+The initial use-case we explored was the potential to transform labour unions. In Australia, for example, there have been countless scandals surrounding the misappropriation of funds by union officials. The UnionD model would bring immediate transparency to the finances of such organisations. Labour Unions often grow to a model that is, for all intents and purposes, identical to the structures of power they were initially designed to offset. For example, it would not be uncommon for top-ranking union officials to earn a salary equivalent to the upper management within a corporation. Labour Union 'apparatchiks', a term used to describe career factional operatives, can hold considerable political power within their organisations, distorting outcomes. Under the UnionD model, there is room for 'apparatchiks', however, their political capital would be allocated to them only by the explicit consent and will of their fellow members. Furthermore under the UnionD model, it is possible to organise Labour Unions around commonalities other than the workplace. Given the fractionalisation of the workforce, we can imagine Labour Unions forming under the UnionD model on the basis of shared skills. This could confer other benefits, such as peer mentoring whereby fellow members share  skills and insights of their craft, raising the quality of the workforce. A UnionD Labour Union, would provide a better conduit between workers and management, increase the tempo of decision making, and those decisions would be better reflective of the will of the members.
 
 \subsection{Co-operatives}
 
